--- a/styles/home.css
+++ b/styles/home.css
@@ -51,6 +51,7 @@
   letter-spacing: 0.5rem;
   cursor: pointer;
   transition: all 0.5s ease;
+  border-radius: 2px;
 }
 
 .main-container a:hover {
