--- a/styles/about.css
+++ b/styles/about.css
@@ -1,23 +1,24 @@
 .about {
   padding: 1rem;
   display: flex;
-  margin: 2rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column-reverse;
 }
 
 .description {
-  width: 50%;
   padding: 1rem;
+  transform: translateX(-100vw);
 }
 
 .description h2 {
-  font-size: 1.5rem;
   font-weight: bold;
-  padding-bottom: 2rem;
+  padding: 2rem;
 }
 
 .description p {
   margin-bottom: 4rem;
-  line-height: 1.4rem;
 }
 
 .description a {
@@ -27,14 +28,82 @@
   width: 30%;
   min-width: 250px;
   color: var(--black-color);
-  font-size: 1.2rem;
   text-align: center;
   border: 2px solid var(--black-color);
+  transition: all 0.5s ease;
+}
+
+.description a:hover {
+  border: 2px solid var(--primary-color);
+  background: var(--primary-color);
+  color: var(--white-color);
 }
 
 .about-image {
+  height: 30vh;
   background-image: url("https://images.unsplash.com/photo-1553051021-9f94520a6cad?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
   background-repeat: no-repeat;
   background-size: cover;
-  width: 60%;
+  width: 100%;
+  transform: translateX(100vw);
+}
+
+@media screen and (min-width: 576px) {
+  .about-image {
+    height: 40vh;
+  }
+}
+@media screen and (min-width: 768px) {
+  .about-image {
+    height: 45vh;
+  }
+}
+@media screen and (min-width: 992px) {
+  .about {
+    flex-direction: row;
+  }
+
+  .description {
+    width: 50%;
+  }
+
+  .about-image {
+    height: 55vh;
+    width: 65%;
+    max-width: 890px;
+  }
+}
+@media screen and (min-width: 1200px) {
+}
+
+@media screen and (min-width: 1400px) {
+  .about {
+    padding-bottom: 10rem;
+  }
+}
+
+@keyframes descriptionAnimation {
+  from {
+    transform: translateX(-100vw);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes imageAnimation {
+  from {
+    transform: translateX(100vw);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+.description-animation {
+  animation: descriptionAnimation 1.5s forwards;
+}
+
+.image-animation {
+  animation: imageAnimation 1.5s forwards;
 }
