--- a/styles/basic.css
+++ b/styles/basic.css
@@ -1,8 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@600&family=Roboto+Condensed:wght@300;400;700&family=Sono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;700&display=swap");
+
 :root {
   --primary-color: #513d2a;
   --second-color: #a98b6f;
-  --white-color: #f2f2f2;
+  --white-color: #fbfbfb;
   --black-color: #222222;
   --gray-color: #cccccc;
 }
@@ -17,9 +18,12 @@ html {
 }
 
 body {
-  font-family: "Roboto Condensed", sans-serif;
-  font-family: "Sono", sans-serif;
+  font-family: "Montserrat", sans-serif;
   background: var(--white-color);
+}
+
+main {
+  overflow: hidden;
 }
 
 img {
@@ -32,4 +36,163 @@ a {
 }
 
 @media screen and (min-width: 1400px) {
+  section:not(:first-child) {
+    margin: 0 10vw;
+  }
+}
+
+/* Base font size and line height */
+html {
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+/* Define font sizes and line heights for all HTML tags */
+h1 {
+  font-size: 1.75rem; /* 28px */
+  line-height: 1.2;
+}
+
+h2 {
+  font-size: 1.25rem; /* 20px */
+  line-height: 1.3;
+}
+
+h3 {
+  font-size: 1rem; /* 16px */
+  line-height: 1.4;
+}
+
+p,
+a,
+label,
+input {
+  font-size: 0.75rem; /* 12px */
+  line-height: 1.5;
+}
+
+/* Define media query breakpoints and adjust font sizes and line heights accordingly */
+@media screen and (min-width: 576px) {
+  h1 {
+    font-size: 2rem; /* 32px */
+    line-height: 1.2;
+  }
+
+  h2 {
+    font-size: 1.5rem; /* 24px */
+    line-height: 1.3;
+  }
+
+  h3 {
+    font-size: 1.25rem; /* 20px */
+    line-height: 1.4;
+  }
+
+  p,
+  a,
+  label,
+  input {
+    font-size: 0.875rem; /* 14px */
+    line-height: 1.5;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  h1 {
+    font-size: 2.25rem; /* 36px */
+    line-height: 1.2;
+  }
+
+  h2 {
+    font-size: 1.75rem; /* 28px */
+    line-height: 1.3;
+  }
+
+  h3 {
+    font-size: 1.375rem; /* 22px */
+    line-height: 1.4;
+  }
+
+  p,
+  a,
+  label,
+  input {
+    font-size: 0.9375rem; /* 15px */
+    line-height: 1.5;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  h1 {
+    font-size: 2.5rem; /* 40px */
+    line-height: 1.2;
+  }
+
+  h2 {
+    font-size: 2rem; /* 32px */
+    line-height: 1.3;
+  }
+
+  h3 {
+    font-size: 1.75rem; /* 28px */
+    line-height: 1.4;
+  }
+
+  p,
+  a,
+  label,
+  input {
+    font-size: 1rem; /* 16px */
+    line-height: 1.5;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  h1 {
+    font-size: 2.75rem; /* 44px */
+    line-height: 1.2;
+  }
+
+  h2 {
+    font-size: 2.25rem; /* 36px */
+    line-height: 1.3;
+  }
+
+  h3 {
+    font-size: 1.875rem; /* 30px */
+    line-height: 1.4;
+  }
+
+  p,
+  a,
+  label,
+  input {
+    font-size: 1.125rem; /* 18px */
+    line-height: 1.5;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  h1 {
+    font-size: 3rem; /* 48px */
+    line-height: 1.2;
+  }
+
+  h2 {
+    font-size: 2.5rem; /* 40px */
+    line-height: 1.3;
+  }
+
+  h3 {
+    font-size: 2.125rem; /* 34px */
+    line-height: 1.4;
+  }
+
+  p,
+  a,
+  label,
+  input {
+    font-size: 1.25rem; /* 20px */
+    line-height: 1.5;
+  }
 }
