--- a/styles/home.css
+++ b/styles/home.css
@@ -13,11 +13,14 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .main-container {
   position: absolute;
-  z-index: 90;
+  z-index: 1;
   top: 40%;
   width: 100%;
   display: flex;
@@ -28,7 +31,6 @@
 
 .main-container h1 {
   color: var(--white-color);
-  font-size: 3rem;
   text-align: center;
 }
 .main-container div {
@@ -47,11 +49,11 @@
   text-align: center;
   border: 2px solid var(--white-color);
   color: var(--white-color);
-  font-size: 1.5rem;
   letter-spacing: 0.5rem;
   cursor: pointer;
   transition: all 0.5s ease;
   border-radius: 2px;
+  margin-top: 1rem;
 }
 
 .main-container a:hover {
@@ -83,15 +85,29 @@
 }
 
 .home-container h2 {
-  font-size: 2rem;
   display: block;
 }
 
-.home-container::before,
-.home-container::after {
-  content: "";
-  width: 50px;
-  height: 3px;
-  background-color: var(--second-color);
-  margin: 2rem;
+@media screen and (min-width: 576px) {
+  .home-container::before,
+  .home-container::after {
+    content: "";
+    width: 50px;
+    height: 3px;
+    background-color: var(--second-color);
+    margin: 2rem;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .main-container {
+    width: 70vw;
+    max-width: 1100px;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .main-container {
+    width: 70vw;
+  }
 }
